--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "## Getting Started",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node .\\build\\.",
+    "start": "npm run build && node build/.",
     "build": "npx tsc",
     "dev": "nodemon src/index.ts",
-    "prettier": "prettier --config .prettierrc src/**/*.ts --write",
+    "prettier": "prettier --config .prettierrc.yaml src/**/*.ts --write",
     "lint": "eslint . --ext .ts",
     "format": "npm run prettier && npm run lint",
     "jasmine": "jasmine",
@@ -21,13 +21,13 @@
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.15.0",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jasmine": "^4.2.1",
     "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.16",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
