--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "prettier": "prettier --config .prettierrc.yaml src/**/*.ts --write",
     "lint": "eslint . --ext .ts",
     "format": "npm run prettier && npm run lint",
-    "jasmine": "jasmine",
-    "test": "npm run build && npm run jasmine"
+    "test": "npm run build && jasmine"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +18,8 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^17.0.31",
+    "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.18.0",
@@ -28,10 +29,13 @@
     "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.7.1",
+    "supertest": "^6.2.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "pg": "^8.7.3"
   }
 }
