--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "lint": "eslint . --ext .ts",
     "format": "npm run prettier && npm run lint",
     "test": "npm run build && jasmine",
-    "migu":"db-migrate up",
-    "migr":"db-migrate reset"
+    "migu": "db-migrate up",
+    "migr": "db-migrate reset"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^17.0.31",
@@ -36,10 +37,12 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
   }
 }
