--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.31",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
